# rag-experiments

./: main.py  pyproject.toml  requirements.txt
data/: 1.txt
data/vector_store/: chroma.sqlite3
notebook/: doc.ipynb
