[project]
name = "rag-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "sentence-transformers>=5.2.0",
]
